# vpa

./: .gitignore  AGENTS.md  DESIGN.md  LEDGER.md  NOTE.md  PHASES.md  README.md  TODO.md  demo.md  main.py  pyproject.toml  vpa.example.toml
vpa/: agent.py  config.py  harness.py  ledger.py  main.py  prompt.py  report.py  slicer.py  tools.py  verify.py
vpa/analysis/: __init__.py  change_analyzer.py  classifier.py  isa_mapper.py  preprocessor.py
vpa/engines/: __init__.py  git.py  repair.py  validation.py
vpa/ledger/: __init__.py  report.py  store.py
vpa/orchestrator/: __init__.py  llm_gate.py  models.py  promotion.py
vpa/tests/: fixtures.py  test_cli.py  test_cli_dry_run.py  test_dry_run.py  test_harness_int.py  test_hitl.py  test_ledger.py  test_ledger_store.py  test_phase1_workflow.py  test_phase2_mechanical_git.py  test_phase3_semantic_port.py  test_repair_tools.py  test_report.py  test_scenarios.py  test_slicer.py  test_tools.py
