[project]
name = "version-promotion-agent"
version = "0.1.0"
description = "Upstream-to-local code promotion agent with semantic porting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["openai>=1.0.0"]

[project.scripts]
vpa = "vpa.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["ruff>=0.15", "pyright>=1.1"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.13"
reportMissingTypeStubs = false
reportUnknownMemberType = false
