[project]
name = "version-promotion-agent"
version = "1.0.0"
description = "Upstream-to-local code promotion agent with semantic porting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["openai>=1.0.0"]

[project.scripts]
vpa = "vpa.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vpa*"]
exclude = ["logs*"]

[dependency-groups]
dev = ["ruff>=0.15", "pyright>=1.1", "pytest>=8.0"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["box64-2-sw64", "box64_2_sw64.tar.gz"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.13"
reportMissingTypeStubs = false
reportUnknownMemberType = false
exclude = ["box64-2-sw64", ".venv"]

[tool.pytest.ini_options]
testpaths = ["vpa/tests"]
norecursedirs = ["box64-2-sw64", ".venv"]
